--- a/css/components/list.css
+++ b/css/components/list.css
@@ -1,39 +1,4 @@
-.product {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  transition: all 0.3s ease;
-  border-radius: 3px;
-}
 
-.product:hover {
-  background: rgb(190, 190, 190);
-  color:#222322;
-}
-
-
-.product:hover .product-upvote {
-  font-size: 25px;
-}
-
-
-.product-upvote {
-  font-size: 20px;
-  padding: 20px;
-  transition: all 0.3s ease;
-}
-
-.product-description {
-  flex: 1 0 auto;
-  padding: 20px;
-}
-.product-controls a {
-  font-size: 15px;
-  color: #CCCCCC;
-}
-
-/* Ara Nielsen */
 
 .concert {
   display: flex;
@@ -51,17 +16,18 @@
 .concert-date {
   font-size: 20px;
   padding: 20px;
+  flex: 0 0 15%;
 }
 
 .concert-venue {
-  flex: 1 0 auto;
   padding: 20px;
+  flex: 0 0 55%;
 }
 
 .concert-town {
-  flex: 0 0 300px;
   font-size: 20px;
   padding: 20px;
+  flex: 0 0 35%;
 }
 
 
@@ -70,13 +36,7 @@
   margin:0px !important;
 }
 
-.concert-town a {
-  color:#A3EEF3 !important;
-}
 
-.concert-town a:hover {
-  color: #CA2A26 !important;
-}
 
 @media only screen and (max-width: 768px) {
 
@@ -85,8 +45,8 @@
   }
 
   .concert-date {
-      font-size: 16px;
-      padding: 20px 10px 20px 0;
+      font-size: 14px;
+      padding: 20px 10px;
   }
 
   .concert-venue {
@@ -94,11 +54,20 @@
   }
 
   .concert-venue h3 {
-    font-size: 17px;
+    font-size: 14px;
     line-height: 23px;
   }
 
   .concert-town {
-    font-size: 17px;
+    font-size: 14px;
+    padding: 20px 10px;
+}
+
+.list-inline>li {
+   padding-left: 5px;
+}
+
+span.other-bands {
+    font-size: 14px;
 }
 }
